started html notes

--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
 <head>
         <meta charset="UTF-8:>
         <meta name="viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>HTML Notes</title>
 </head>
 <body>
+        <!--This is a Comment-->
+        <!-- You can still use ctrl / to comment -->
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+
+        Cras id volutpat tortor, non mattis justo. 
+
+        <P> Maecenas bibendum metus ut justo laoreet aliquam. 
+        Quisque a dui at elit viverra <strong>viverra.</strong></P>
+
+        <h2>Maecenas rutrum <em>tristique</em> leo, a porta lacus porta nec.</h2> 
+
+        Praesent molestie pulvinar est non volutpat. 
+
+        <p>Pellentesque placerat sem vitae massa elementum scelerisque. </p>
+
+       <h3>Fusce fringilla, diam quis hendrerit interdum, urna est auctor augue, quis fermentum dui magna ac nisl. </h3>
+
+       Sed ut tellus leo. Nunc convallis hendrerit iaculis. Vivamus interdum auctor enim.
+
+       <p>
+       <b>bold</b>
+       <i>itallic</i>
+       </p>
 
 
-        <script src="Loops.js"></script>
-
+        <script src="Functions.js"></script>
 </body>
 </html>
