continued html notes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
         <!--This is a Comment-->
         <!-- You can still use ctrl / to comment -->
-        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+        <!-- <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
 
         Cras id volutpat tortor, non mattis justo. 
 
@@ -28,9 +28,73 @@
        <p>
        <b>bold</b>
        <i>itallic</i>
-       </p>
+       </p> -->
 
+       <!-- To make a list we have to dclare he list type -->
+<!-- <h3>Types of Tea Mr. Smith Likes</h3>
+       <ul>
+<li>Rooibos</li>
+<li>Darjeeling</li>
+<li>Black Cinnamin</li>
+<li>Chai</li>
+       </ul>
 
-        <script src="Functions.js"></script>
+<h3>Classes Mr. Smith Teaches</h3>
+       <ol>
+        <li>Ap Physicis I</li>
+        <li>Ap Physicis I</li>
+        <li>French IV</li>
+        <li>Ap Physicis I</li>
+        <li>Ap Physicis C</li>
+        <li>Engineering 4</li>
+        <li>Intro to Programming</li>
+        <li>Plan</li>
+       </ol> -->
+
+       <H3>Things I need to buy</H3>
+       <ul>
+        <li>Chicken</li>
+        <li>Lobster</li>
+        <li>Corn</li>
+        <li>Aspearagus</li>
+        <li>German Chocolate Cake</li>
+       </ul>
+
+       <h3>Things I need to do today</h3>
+       <ol>
+        <li>Wake Up</li>
+        <li>Go to school</li>
+        <li>Go shoping for Warhammer</li>
+        <li>Go Home</li>
+        <li>Eat Dinner</li>
+        <li>Go sleep</li>
+       </ol>
+
+       <h3>places I'd Like to Visit One Day</h3>
+       <ul>
+        <li>Berlin</li>
+        <li>Munich</li>
+        <li>Nurenburg</li>
+        <li>Frankfurt</li>
+        <li>Rhur</li>
+        <li>Lubeck</li>
+        <li>Holstein</li>
+        <li>Stockholm</li>
+        <li>Verssials</li>
+        <li>Moscow</li>
+        <li>Madrid</li>
+        <li>Tokyo</li>
+       </ul>
+
+       <h3>Top 5 Warhammer Factions for the <a href = https://www.google.com/search?q=board+game&rlz=1C1CHBF_enUS1124US1124&oq=board+game&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiPAjIHCAIQABiPAtIBCDIwMTVqMGo5qAIAsAIB&sourceid=chrome&ie=UTF-8&safe=active&ssui=on target = "_blank" rel = "noopener noreferrer">Board Game</a></h3>
+       <ol>
+        <li>Tyranids</li>
+        <li>Generic Space Marines</li>
+        <li>Generic Chaos Space Marines</li>
+        <li>Astra Millitarum</li>
+        <li>Eldar</li>
+       </ol>
+<img src = https://pbs.twimg.com/amplify_video_thumb/1750520311227801600/img/tuxzmeXZ0es3pFeX.jpg:large>
+             <script src="Functions.js"></script>
 </body>
 </html>
