More html notes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <li>Astra Millitarum</li>
         <li>Eldar</li>
        </ol>
-<img src = https://pbs.twimg.com/amplify_video_thumb/1750520311227801600/img/tuxzmeXZ0es3pFeX.jpg:large>
+<img src = ./images/programing test image.jpg_large>
              <script src="Functions.js"></script>
 </body>
 </html>
