continued css notes

--- a/Pages/Sample.html
+++ b/Pages/Sample.html
@@ -11,6 +11,9 @@
 
     <p>Check out my <a href = Sample.html>sample page</a></p>
 
+    <h3>Here is this guy's face</h3>
+
+    <img src = "../images/programing test image.jpg_large">
         <script src="Functions.js"></script>
 </body>
 </html>
