started on ancestors and decendents

--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
        <dif> Hi </dif>
        <p>Is anybody there?</p>
        <dif class ='sad'>Okay, then. Bye...</dif> -->
-        <h1 id = 'top-of-page'>Welcome to King Lear</h1>
+        <!-- <h1 id = 'top-of-page'>Welcome to King Lear</h1> -->
 <!--Example to show class selector-->
-<p class = Edmund>E: lol</p>
+<!-- <p class = Edmund>E: lol</p>
 <p class = Gloucester class = royal>G: Son but with different woman</p>
 <p class = Kent>K: huh huh</p>
 <p class = Edmund>E: I hate my dad and life</p>
 <p class = Gloucester class = royal>G: son mine</p>
 <p class = Kent>K: son yours</p>
-<p class = Lear class = royal id = 'Arogant'>KL: I am king worship</p>
+<p class = 'Lear royal' id = 'Arogant'>KL: I am king worship</p> -->
+
+
+<div class = 'unread important'>Message 1</div>
+<div class = 'unread'>Message 2</div>
+<div class = 'read important'>Message 3</div>
+<div class = 'read'>Message 4</div>
 
              <script src="Functions.js"></script>
 </body>
