--- a/index.html
+++ b/index.html
@@ -24,10 +24,76 @@
 <p class = 'Lear royal' id = 'Arogant'>KL: I am king worship</p> -->
 
 
-<div class = 'unread important'>Message 1</div>
+<!-- <div class = 'unread important'>Message 1</div>
 <div class = 'unread'>Message 2</div>
 <div class = 'read important'>Message 3</div>
-<div class = 'read'>Message 4</div>
+<div class = 'read'>Message 4</div> -->
+
+<div class = roster>
+        <div class = pitchers>
+                <div class = starters>
+                        <ul>
+                                <li>Andrew Abbott</li>
+                                <li>Hunter Greene</li>
+                                <li>Nick Lodolo</li>
+                                <li>Nick Martinez</li>
+                                <li>Brady Singer</li>
+                        </ul>
+                </div>
+                <div class = relievers>
+                        <ul>
+                                <li>Graham Ashcraft</li>
+                                <li>Scott Barlow</li>
+                                <li>Alexis Díaz</li>
+                                <li>Rhett Lowder</li>
+                                <li>Sam Moll</li>
+                                <li>Emilio Pagán</li>
+                                <li>Taylor Rogers</li>
+                                <li>Tony Santillan</li>
+                                <li>Carson Spiers</li>
+                                <li>Brent Suter</li>
+                                <li>Brandon Williamson</li>
+                        </ul>
+                </div>
+        </div>
+        <div class = 'position-players'>
+                <div class = infielder>
+                        <ul>
+                                <li>Tyler Stephenson</li>
+                                <li>Jose Trevino</li>
+                                <li>Jeimer Candelario</li>
+                                <li>Elly De La Cruz</li>
+                                <li>Christian Encarnacion-Strand</li>
+                                <li>Santiago Espinal</li>
+                                <li>Matt McLain</li>
+                                <li>Gavin Lux</li>
+                        </ul>
+                </div>
+                <div class = outfielder>
+                        <ul>
+                                <li>Blake Dunn</li>
+                                <li>Stuart Fairchild</li>
+                                <li>Jake Fraley</li>
+                                <li>TJ Friedl</li>
+                                <li>Austin Hays</li>
+                                <li>Jacob Hurtubise</li>
+                                <li>Spencer Steer</li>
+                        </ul>
+                </div>
+        </div>
+</div>
+
+<div class = outfielder>
+        <ul>
+                <li>Blake Dunn</li>
+                <li>Stuart Fairchild</li>
+                <li>Jake Fraley</li>
+                <li>TJ Friedl</li>
+                <li>Austin Hays</li>
+                <li>Jacob Hurtubise</li>
+                <li>Spencer Steer</li>
+        </ul>
+</div>
 
              <script src="Functions.js"></script>
 </body>
