more css notes again

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <link rel = "stylesheet" href = "Styles.css">
         <meta name="viewport" content = "width=device-width, initial-scale=1.0">
         <title>HTML (CSS) Notes</title>
+        <style>
+                body{
+                        background-color: yellowgreen;
+                }
+        </style>
 </head>
 <body>
      
@@ -75,7 +80,7 @@
                                 <li>Stuart Fairchild</li>
                                 <li>Jake Fraley</li>
                                 <li>TJ Friedl</li>
-                                <li>Austin Hays</li>
+                                <li style = 'color:brown; background-color: aqua; text-align: right;'>Austin Hays</li>
                                 <li>Jacob Hurtubise</li>
                                 <li>Spencer Steer</li>
                         </ul>
@@ -94,6 +99,8 @@
                 <li>Spencer Steer</li>
         </ul>
 </div>
+
+
 
              <script src="Functions.js"></script>
 </body>
