the box was def flexing

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content = "width=device-width, initial-scale=1.0">
         <title>HTML (CSS) Notes</title>
         <style>
-                body{
+                /* body{
                         background-color: yellowgreen;
-                }
+                } */
         </style>
 </head>
 <body>
@@ -33,7 +33,7 @@
 <div class = 'unread'>Message 2</div>
 <div class = 'read important'>Message 3</div>
 <div class = 'read'>Message 4</div> -->
-
+<!-- 
 <div class = roster>
         <div class = pitchers>
                 <div class = starters>
@@ -98,8 +98,16 @@
                 <li>Jacob Hurtubise</li>
                 <li>Spencer Steer</li>
         </ul>
-</div>
+</div> -->
 
+<!--Flexbox examples-->
+
+
+<div class = 'flex-contain'>
+        <div class = 'one'></div>
+        <div class = 'two'></div>
+        <div class = 'three'></div>
+</div>
 
 
              <script src="Functions.js"></script>
